-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: repo-panama
-
Component/s: hotspot
2 tests IntMaxVectorTests.java and FloatMaxVectorTests.java crash when run with -Xcomp.
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/ciConstant.hpp:109
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/ci/ciConstant.hpp:109), pid=24120, tid=24135
# assert(is_reference_type(basic_type())) failed: wrong type
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.sandhya.vint)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.sandhya.vint, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x17d7548] check_vbox(TypeInstPtr const*) [clone .constprop.76]+0x168
jtreg --add-modules jdk.incubator.vector -XX:-TieredCompilation -Xcomp IntMaxVectorTests.java
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/ciConstant.hpp:109
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (src/hotspot/share/ci/ciConstant.hpp:109), pid=24120, tid=24135
# assert(is_reference_type(basic_type())) failed: wrong type
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc.sandhya.vint)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc.sandhya.vint, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x17d7548] check_vbox(TypeInstPtr const*) [clone .constprop.76]+0x168
jtreg --add-modules jdk.incubator.vector -XX:-TieredCompilation -Xcomp IntMaxVectorTests.java
- relates to
-
JDK-8244269 29 vector api tests crashed with "assert(is_location()) failed: must be"
-
- Resolved
-