8244867: 2 vector api tests crash with assert(is_reference_type(basic_type())) failed: wrong type

Adding safety checks to prevent intrinsification if class arguments of non-primitive types are uninitialized.

Reviewed-by: psandoz, sviswanathan